Fix padding-block wrong display on mobile

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     border-radius: 4px;
     color: var(--fontColor);
     margin-inline: 8px;
-    margin-block: 32px;
+    margin-block: 8px;
     padding: 8px;
     cursor: pointer;
     width: fit-content;
